--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script type="text/javascript" src="js/services/serialGeneratorService.js"></script>
 	<script type="text/javascript" src="js/config/serialGeneratorConfig.js"></script>
 	<script type="text/javascript" src="js/value/configValue.js"></script>
+	<script type="text/javascript" src="js/filters/nameFilter.js"></script>
+	<script type="text/javascript" src="js/filters/ellipsisFilter.js"></script>
 	
 </head>
 <body ng-controller="listaTelefonicaCtrl">
@@ -33,7 +35,7 @@
 			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoOrdenacao">
 				<td><input type="checkbox" ng-model="contato.selecionado"></td>
 				<th>{{contato.serial}}</th>
-				<td>{{contato.nome | uppercase}}</td>
+				<td>{{contato.nome | name | ellipsis:15}}</td>
 				<td>{{contato.telefone}}</td>
 				<td>{{contato.operadora.nome | lowercase}}</td>
 				<td>{{contato.data | date:'dd/MM/yyyy'}}</td>
